# serializer version: 1
# name: test_fans[fan.prana_recuperator_extract_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        'night',
        'boost',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.prana_recuperator_extract_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Extract fan',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Extract fan',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': 'extract',
    'unique_id': 'ECC9FFE0E574_extract',
    'unit_of_measurement': None,
  })
# ---
# name: test_fans[fan.prana_recuperator_extract_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'PRANA RECUPERATOR Extract fan',
      'percentage': 10,
      'percentage_step': 10.0,
      'preset_mode': None,
      'preset_modes': list([
        'night',
        'boost',
      ]),
      'supported_features': <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.prana_recuperator_extract_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fans[fan.prana_recuperator_supply_fan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'preset_modes': list([
        'night',
        'boost',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.prana_recuperator_supply_fan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Supply fan',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Supply fan',
    'platform': 'prana',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 57>,
    'translation_key': 'supply',
    'unique_id': 'ECC9FFE0E574_supply',
    'unit_of_measurement': None,
  })
# ---
# name: test_fans[fan.prana_recuperator_supply_fan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'PRANA RECUPERATOR Supply fan',
      'percentage': 10,
      'percentage_step': 10.0,
      'preset_mode': None,
      'preset_modes': list([
        'night',
        'boost',
      ]),
      'supported_features': <FanEntityFeature: 57>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.prana_recuperator_supply_fan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
